Fix table horizontal scrolling

--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -11,7 +11,7 @@
   transform: translate(50%, 50%);
 }
 
-.tableContainer {
+.mainSection {
   width: 100%;
   display: flex;
   flex-direction: column;
@@ -19,13 +19,18 @@
   justify-content: flex-start;
   margin-right: 20vw;
   padding: 0.6rem;
-  overflow-x: auto;
+  overflow: hidden;
 }
 
 .search {
   margin-left: auto;
   margin-bottom: 1rem;
   padding: 0.5rem;
+}
+
+.tableContainer {
+  width: 100%;
+  overflow-x: auto;
 }
 
 .columnSelector {
